Fix overflowing the main container issue

--- a/src/components/FeaturedBooks/featuredBooks.css
+++ b/src/components/FeaturedBooks/featuredBooks.css
@@ -5,7 +5,7 @@
 .container {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    max-width: 100%;
     height: 330px;
     background-color: rgb(129, 129, 129);
     background-image: url("../../../public/FeaturedBooksBG.jpg");
@@ -14,6 +14,8 @@
     background-position: bottom;
     border-radius: 15px;
     padding: 1vw 1vw 1vw 1vw;
+    margin: 2vw 10vw 0 10vw;
+    overflow: hidden;
 }
 
 .itemWrapper {
